<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.Login.PhoneNumberEntry.PhoneLogin">'

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_black"
                android:text="Circle"
                android:textColor="#2196F3"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/beneathTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:layout_gravity="center"
                android:text="Redefining Communication and Connection"
                android:textColor="#D1D1D1"
                android:textSize="14dp"
                 />



            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="Enter Your Phone Number"
                android:textColor="@color/color_blue"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/login_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_light"
                android:text="Please Select your Country "
                android:textAlignment="center"
                android:textColor="@color/black"

                android:textSize="12dp"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/ccp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/ic_clear_white_24dp"
                android:entries="@array/countries_array"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:padding="5dp"
                android:textAlignment="center" />
            <View
                android:layout_width="match_parent"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#D3D0D0"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="25dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/country_code_text"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/ic_clear_white_24dp"
                    android:clickable="false"
                    android:editable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="number"
                    android:paddingLeft="3dp"
                    android:paddingTop="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="18sp" />
                <View
                    android:layout_width="1dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:background="#D3D0D0"></View>
                <EditText
                    android:id="@+id/phone_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/ic_clear_white_24dp"
                    android:ems="10"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="Your Phone Number"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="#D3D0D0"></View>
            <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="59dp"
            android:fontFamily="@font/roboto_light"
            android:text="A 6 digit OTP will be sent via sms to verify your number."
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <Button
                    android:id="@+id/generate_btn"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:width="200dp"
                    android:background="@drawable/gradient_button"
                    android:fontFamily="@font/roboto_black"
                    android:text="Generate OTP"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/login_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignTop="@+id/generate_btn"
                    android:layout_alignEnd="@+id/generate_btn"
                    android:layout_alignRight="@+id/generate_btn"
                    android:layout_gravity="right"
                    android:layout_marginLeft="335dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:theme="@style/progressbar"
                    android:visibility="invisible" />
            </RelativeLayout>
            <TextView
                android:id="@+id/login_form_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Working . . ."
                android:textColor="@android:color/holo_red_light"
                android:textIsSelectable="true"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>