...
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/skip_get_started"
        android:layout_width="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="3dp"
        android:layout_height="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Skip"
        android:layout_gravity="right"
        android:textSize="19dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
