...
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your location will be used to show most relevant circles around you. Choose 'Agree and continue' to grant location access."
            android:fontFamily="@font/roboto_regular"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#40000000"
...

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/agreeandContinueEntryPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
...
