...
            android:text="We have sent you an OTP \n for phone number verification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <circleapp.circleapppackage.circle.ui.Login.OtpVerification.PinEntryEditText
            android:id="@+id/otp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:cursorVisible="false"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/gradient_button"
...
